@@ -170,7 +170,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.1308 $"))
+    (let ((rev "$Revision: 1.1309 $"))
       (and (string-match "\\.\\([0-9]+\\) \\$\\'" rev)
 	   (setq rev (- (string-to-number (match-string 1 rev)) 1136))
 	   (format "1.4.%d" (+ rev 50)))))
@@ -1907,163 +1907,157 @@ In that case, emacs-w3m uses Google to search for the words."
   :group 'w3m
   :type '(string :size 0))
 
-(defconst w3m-entity-alist
-  (append
-   (eval-when-compile
-     (let ((basic-entity-alist
-	    '(("nbsp" . " ")
-	      ("gt" . ">")
-	      ("lt" . "<")
-	      ("amp" . "&")
-	      ("quot" . "\"")
-	      ("apos" . "'")
-	      ("circ" . "^")
-	      ("tilde" . "~")))
-	   (latin1-entity
-	    '(;("nbsp" . 160)
-	      ("iexcl" . 161) ("cent" . 162) ("pound" . 163) ("curren" . 164)
-	      ("yen" . 165) ("brvbar" . 166) ("sect" . 167) ("uml" . 168)
-	      ("copy" . 169) ("ordf" . 170) ("laquo" . 171) ("not" . 172)
-	      ("shy" . 173) ("reg" . 174) ("macr" . 175) ("deg" . 176)
-	      ("plusmn" . 177) ("sup2" . 178) ("sup3" . 179) ("acute" . 180)
-	      ("micro" . 181) ("para" . 182) ("middot" . 183) ("cedil" . 184)
-	      ("sup1" . 185) ("ordm" . 186) ("raquo" . 187) ("frac14" . 188)
-	      ("frac12" . 189) ("frac34" . 190) ("iquest" . 191)
-	      ("Agrave" . 192) ("Aacute" . 193) ("Acirc" . 194)
-	      ("Atilde" . 195) ("Auml" . 196) ("Aring" . 197) ("AElig" . 198)
-	      ("Ccedil" . 199) ("Egrave" . 200) ("Eacute" . 201)
-	      ("Ecirc" . 202) ("Euml" . 203) ("Igrave" . 204) ("Iacute" . 205)
-	      ("Icirc" . 206) ("Iuml" . 207) ("ETH"  . 208) ("Ntilde" . 209)
-	      ("Ograve" . 210) ("Oacute" . 211) ("Ocirc" . 212)
-	      ("Otilde" . 213) ("Ouml" . 214) ("times" . 215) ("Oslash" . 216)
-	      ("Ugrave" . 217) ("Uacute" . 218) ("Ucirc" . 219) ("Uuml" . 220)
-	      ("Yacute" . 221) ("THORN" . 222) ("szlig" . 223) ("agrave" . 224)
-	      ("aacute" . 225) ("acirc" . 226) ("atilde" . 227) ("auml" . 228)
-	      ("aring" . 229) ("aelig" . 230) ("ccedil" . 231) ("egrave" . 232)
-	      ("eacute" . 233) ("ecirc" . 234) ("euml" . 235) ("igrave" . 236)
-	      ("iacute" . 237) ("icirc" . 238) ("iuml" . 239) ("eth" . 240)
-	      ("ntilde" . 241) ("ograve" . 242) ("oacute" . 243)
-	      ("ocirc" . 244) ("otilde" . 245) ("ouml" . 246) ("divide" . 247)
-	      ("oslash" . 248) ("ugrave" . 249) ("uacute" . 250)
-	      ("ucirc" . 251) ("uuml" . 252) ("yacute" . 253) ("thorn" . 254)
-	      ("yuml" . 255)))
-	   (greek-entity
-	    '(("Alpha" . 65) ("Beta" . 66) ("Gamma" . 67) ("Delta" . 68)
-	      ("Epsilon" . 69) ("Zeta" . 70) ("Eta" . 71) ("Theta" . 72)
-	      ("Iota" . 73) ("Kappa" . 74) ("Lambda" . 75) ("Mu" . 76)
-	      ("Nu" . 77) ("Xi" . 78) ("Omicron" . 79) ("Pi" . 80)
-	      ("Rho" . 81)		; No ("Sigmaf" . 82)
-	      ("Sigma" . 83) ("Tau" . 84) ("Upsilon" . 85) ("Phi" . 86)
-	      ("Chi" . 87) ("Psi" . 88) ("Omega" . 89)
-	      ("alpha" . 97) ("beta" . 98) ("gamma" . 99) ("delta" . 100)
-	      ("epsilon" . 101) ("zeta" . 102) ("eta" . 103) ("theta" . 104)
-	      ("iota" . 105) ("kappa" . 106) ("lambda" . 107) ("mu" . 108)
-	      ("nu" . 109) ("xi" . 110) ("omicron" . 111) ("pi" . 112)
-	      ("rho" . 113) ("sigmaf" . 114) ("sigma" . 115) ("tau" . 116)
-	      ("upsilon" . 117) ("phi" . 118) ("chi" . 119) ("psi" . 120)
-	      ("omega" . 121))))
-       (append basic-entity-alist
-	       ;; latin1
-	       (mapcar
-		(lambda (entity)
-		  (cons (car entity)
-			(char-to-string (make-char 'latin-iso8859-1
-						   (cdr entity)))))
-		latin1-entity)
-	       ;; greek
-	       (mapcar
-		(lambda (entity)
-		  (cons (car entity)
-			(char-to-string (make-char 'greek-iso8859-7
-						   (cdr entity)))))
-		greek-entity))))
-   (when (w3m-mule-unicode-p)
-     (let ((latin-extended-a
-	    '((32 . (("OElig" . 114) ("oelig" . 115)))
-	      (33 . (("Scaron" . 32) ("scaron" . 33) ("Yuml" . 56)))))
-	   (latin-extended-b '((33 . (("fnof" . 82)))))
-	 ;;(spacing-modifier-letters '(36 . (("circ" . 120) ("tilde" . 124))))
-	   (general-punctuation
-	    '((114 .
-		   (("ensp" . 98) ("emsp" . 99) ("thinsp" . 105) ("zwnj" . 108)
-		    ("zwj" . 109) ("lrm" . 110) ("rlm" . 111) ("ndash" . 115)
-		    ("mdash" . 116) ("lsquo" . 120) ("rsquo" . 121)
-		    ("sbquo" . 122) ("ldquo" . 124) ("rdquo" . 125)
-		    ("bdquo" . 126)))
-	      (115 .
-		   (("dagger" . 32) ("Dagger" . 33) ("permil" . 48)
-		    ("lsaquo" . 57) ("rsaquo" . 58)
-		    ("bull" . 34) ("hellip" . 38) ("prime" . 50) ("Prime" . 51)
-		    ("oline" . 62) ("frasl" . 68)))
-	      (116 .
-		   (("euro" . 76)))))
-	   (greek '((39 . (("thetasym" . 81) ("upsih" . 82) ("piv" . 86)))))
-	   (letterlike-symbols
-	    '((117 .
-		   (("weierp" . 88) ("image" . 81) ("real" . 92)
-		    ("trade" . 98) ("alefsym" . 117)))))
-	   (arrows
-	    '((118 .
-		   (("larr" . 112) ("uarr" . 113) ("rarr" . 114) ("darr" . 115)
-		    ("harr" . 116)))
-	      (119 .
-		   (("crarr" . 53) ("lArr" . 80) ("uArr" . 81) ("rArr" . 81)
-		    ("dArr" . 83) ("hArr" . 84)))))
-	   (mathematical-operators
-	    '((120 .
-		   (("forall" . 32) ("part" . 34) ("exist" . 35) ("empty" . 37)
-		    ("nabla" . 39) ("isin" . 40) ("notin" . 41) ("ni" . 43)
-		    ("prod" . 47) ("sum" . 49) ("minus" . 50) ("lowast" . 55)
-		    ("radic" . 58) ("prop" . 61) ("infin" . 62) ("ang" . 64)
-		    ("and" . 71) ("or" . 72) ("cap" . 73) ("cup" . 74)
-		    ("int" . 75) ("there4" . 84) ("sim" . 92) ("cong" . 101)
-		    ("asymp" . 104)))
-	      (121 .
-		   (("ne" . 32) ("equiv" . 33) ("le" . 36) ("ge" . 37)
-		    ("sub" . 66) ("sup" . 67) ("nsub" . 68) ("sube" . 70)
-		    ("supe" . 71) ("oplus" . 85) ("otimes" . 87)
-		    ("perp" . 101)))
-	      (122 . (("sdot" . 37)))))
-	   (miscellaneous-technical
-	    '((122 . (("lceil" . 104) ("rceil" . 105) ("lfloor" . 106)
-		      ("rfloor" . 107)))
-	      (123 . (("lang" . 41) ("rang" . 42)))))
-	   (suit
-	    '(("loz" . (34 . 42)) ("spades" . (35 . 96)) ("clubs" . (35 . 99))
-	      ("hearts" . (35 . 101)) ("diams" . (35 . 102)))))
-       (append
-	(apply 'append
-	       (mapcar
-		(lambda (entities)
-		  (let ((code1 (car entities)))
-		    (mapcar
-		     (lambda (entity)
-		       (cons (car entity)
-			     (char-to-string
-			      (make-char 'mule-unicode-0100-24ff
-					 code1 (cdr entity)))))
-		     (cdr entities))))
-		`(,@latin-extended-a ,@latin-extended-b ,@general-punctuation
-		  ,@greek ,@letterlike-symbols ,@arrows
-		  ,@mathematical-operators ,@miscellaneous-technical)))
-	(mapcar
-	 (lambda (entity)
-	   (cons (car entity)
-		 (char-to-string
-		  (make-char 'mule-unicode-2500-33ff
-			     (car (cdr entity)) (cdr (cdr entity))))))
-	 suit)))))
-  "Alist of html character entities and values.")
+(defconst w3m-entity-table
+  (let ((table (make-hash-table :test 'equal)))
+    (dolist (entity '(("nbsp" . " ")
+		      ("gt" . ">")
+		      ("lt" . "<")
+		      ("amp" . "&")
+		      ("quot" . "\"")
+		      ("apos" . "'")
+		      ("circ" . "^")
+		      ("tilde" . "~")))
+      (puthash (car entity) (cdr entity) table))
+    (dolist (entity
+	     '(;("nbsp" . 160)
+	       ("iexcl" . 161) ("cent" . 162) ("pound" . 163) ("curren" . 164)
+	       ("yen" . 165) ("brvbar" . 166) ("sect" . 167) ("uml" . 168)
+	       ("copy" . 169) ("ordf" . 170) ("laquo" . 171) ("not" . 172)
+	       ("shy" . 173) ("reg" . 174) ("macr" . 175) ("deg" . 176)
+	       ("plusmn" . 177) ("sup2" . 178) ("sup3" . 179) ("acute" . 180)
+	       ("micro" . 181) ("para" . 182) ("middot" . 183) ("cedil" . 184)
+	       ("sup1" . 185) ("ordm" . 186) ("raquo" . 187) ("frac14" . 188)
+	       ("frac12" . 189) ("frac34" . 190) ("iquest" . 191)
+	       ("Agrave" . 192) ("Aacute" . 193) ("Acirc" . 194)
+	       ("Atilde" . 195) ("Auml" . 196) ("Aring" . 197) ("AElig" . 198)
+	       ("Ccedil" . 199) ("Egrave" . 200) ("Eacute" . 201)
+	       ("Ecirc" . 202) ("Euml" . 203) ("Igrave" . 204) ("Iacute" . 205)
+	       ("Icirc" . 206) ("Iuml" . 207) ("ETH"  . 208) ("Ntilde" . 209)
+	       ("Ograve" . 210) ("Oacute" . 211) ("Ocirc" . 212)
+	       ("Otilde" . 213) ("Ouml" . 214) ("times" . 215) ("Oslash" . 216)
+	       ("Ugrave" . 217) ("Uacute" . 218) ("Ucirc" . 219) ("Uuml" . 220)
+	       ("Yacute" . 221) ("THORN" . 222) ("szlig" . 223) ("agrave" . 224)
+	       ("aacute" . 225) ("acirc" . 226) ("atilde" . 227) ("auml" . 228)
+	       ("aring" . 229) ("aelig" . 230) ("ccedil" . 231) ("egrave" . 232)
+	       ("eacute" . 233) ("ecirc" . 234) ("euml" . 235) ("igrave" . 236)
+	       ("iacute" . 237) ("icirc" . 238) ("iuml" . 239) ("eth" . 240)
+	       ("ntilde" . 241) ("ograve" . 242) ("oacute" . 243)
+	       ("ocirc" . 244) ("otilde" . 245) ("ouml" . 246) ("divide" . 247)
+	       ("oslash" . 248) ("ugrave" . 249) ("uacute" . 250)
+	       ("ucirc" . 251) ("uuml" . 252) ("yacute" . 253) ("thorn" . 254)
+	       ("yuml" . 255)))
+      (puthash (car entity)
+	       (char-to-string (make-char 'latin-iso8859-1 (cdr entity)))
+	       table))
+    (dolist (entity
+	     '(("Alpha" . 65) ("Beta" . 66) ("Gamma" . 67) ("Delta" . 68)
+	       ("Epsilon" . 69) ("Zeta" . 70) ("Eta" . 71) ("Theta" . 72)
+	       ("Iota" . 73) ("Kappa" . 74) ("Lambda" . 75) ("Mu" . 76)
+	       ("Nu" . 77) ("Xi" . 78) ("Omicron" . 79) ("Pi" . 80)
+	       ("Rho" . 81)	; No ("Sigmaf" . 82)
+	       ("Sigma" . 83) ("Tau" . 84) ("Upsilon" . 85) ("Phi" . 86)
+	       ("Chi" . 87) ("Psi" . 88) ("Omega" . 89)
+	       ("alpha" . 97) ("beta" . 98) ("gamma" . 99) ("delta" . 100)
+	       ("epsilon" . 101) ("zeta" . 102) ("eta" . 103) ("theta" . 104)
+	       ("iota" . 105) ("kappa" . 106) ("lambda" . 107) ("mu" . 108)
+	       ("nu" . 109) ("xi" . 110) ("omicron" . 111) ("pi" . 112)
+	       ("rho" . 113) ("sigmaf" . 114) ("sigma" . 115) ("tau" . 116)
+	       ("upsilon" . 117) ("phi" . 118) ("chi" . 119) ("psi" . 120)
+	       ("omega" . 121)))
+      (puthash (car entity)
+	       (char-to-string (make-char 'greek-iso8859-7 (cdr entity)))
+	       table))
+    (when (w3m-mule-unicode-p)
+      (let ((latin-extended-a
+	     '((32 . (("OElig" . 114) ("oelig" . 115)))
+	       (33 . (("Scaron" . 32) ("scaron" . 33) ("Yuml" . 56)))))
+	    (latin-extended-b '((33 . (("fnof" . 82)))))
+	    ;;(spacing-modifier-letters '(36 . (("circ" . 120) ("tilde" . 124))))
+	    (general-punctuation
+	     '((114 .
+		    (("ensp" . 98) ("emsp" . 99) ("thinsp" . 105) ("zwnj" . 108)
+		     ("zwj" . 109) ("lrm" . 110) ("rlm" . 111) ("ndash" . 115)
+		     ("mdash" . 116) ("lsquo" . 120) ("rsquo" . 121)
+		     ("sbquo" . 122) ("ldquo" . 124) ("rdquo" . 125)
+		     ("bdquo" . 126)))
+	       (115 .
+		    (("dagger" . 32) ("Dagger" . 33) ("permil" . 48)
+		     ("lsaquo" . 57) ("rsaquo" . 58)
+		     ("bull" . 34) ("hellip" . 38) ("prime" . 50) ("Prime" . 51)
+		     ("oline" . 62) ("frasl" . 68)))
+	       (116 .
+		    (("euro" . 76)))))
+	    (greek '((39 . (("thetasym" . 81) ("upsih" . 82) ("piv" . 86)))))
+	    (letterlike-symbols
+	     '((117 .
+		    (("weierp" . 88) ("image" . 81) ("real" . 92)
+		     ("trade" . 98) ("alefsym" . 117)))))
+	    (arrows
+	     '((118 .
+		    (("larr" . 112) ("uarr" . 113) ("rarr" . 114) ("darr" . 115)
+		     ("harr" . 116)))
+	       (119 .
+		    (("crarr" . 53) ("lArr" . 80) ("uArr" . 81) ("rArr" . 81)
+		     ("dArr" . 83) ("hArr" . 84)))))
+	    (mathematical-operators
+	     '((120 .
+		    (("forall" . 32) ("part" . 34) ("exist" . 35) ("empty" . 37)
+		     ("nabla" . 39) ("isin" . 40) ("notin" . 41) ("ni" . 43)
+		     ("prod" . 47) ("sum" . 49) ("minus" . 50) ("lowast" . 55)
+		     ("radic" . 58) ("prop" . 61) ("infin" . 62) ("ang" . 64)
+		     ("and" . 71) ("or" . 72) ("cap" . 73) ("cup" . 74)
+		     ("int" . 75) ("there4" . 84) ("sim" . 92) ("cong" . 101)
+		     ("asymp" . 104)))
+	       (121 .
+		    (("ne" . 32) ("equiv" . 33) ("le" . 36) ("ge" . 37)
+		     ("sub" . 66) ("sup" . 67) ("nsub" . 68) ("sube" . 70)
+		     ("supe" . 71) ("oplus" . 85) ("otimes" . 87)
+		     ("perp" . 101)))
+	       (122 . (("sdot" . 37)))))
+	    (miscellaneous-technical
+	     '((122 . (("lceil" . 104) ("rceil" . 105) ("lfloor" . 106)
+		       ("rfloor" . 107)))
+	       (123 . (("lang" . 41) ("rang" . 42)))))
+	    (suit
+	     '(("loz" . (34 . 42)) ("spades" . (35 . 96)) ("clubs" . (35 . 99))
+	       ("hearts" . (35 . 101)) ("diams" . (35 . 102)))))
+	(dolist (entities `(,@latin-extended-a
+			    ,@latin-extended-b
+			    ,@general-punctuation
+			    ,@greek ,@letterlike-symbols ,@arrows
+			    ,@mathematical-operators
+			    ,@miscellaneous-technical))
+	  (let ((code1 (car entities)))
+	    (dolist (entity (cdr entities))
+	      (puthash (car entity)
+		       (char-to-string
+			(make-char 'mule-unicode-0100-24ff
+				   code1 (cdr entity)))
+		       table))))
+	(dolist (entity suit)
+	  (puthash (car entity)
+		   (char-to-string
+		    (make-char 'mule-unicode-2500-33ff
+			       (car (cdr entity)) (cdr (cdr entity))))
+		   table))))
+    table)
+  "Table of html character entities and values.")
+
+(defconst w3m-entity-reverse-table
+  (let ((table (make-hash-table :test 'equal)))
+    (maphash (lambda (key val) (puthash val key table))
+	     w3m-entity-table)
+    table)
+  "Revision table of html character entities and values.")
 
 (defconst w3m-entity-regexp
-  "&\\([a-z][a-z0-9]*\\|#[0-9]+\\|#x[0-9a-f]+\\)\\(;\\)?"
+  (let (buf)
+    (maphash (lambda (key val) (push key buf))
+	     w3m-entity-table)
+    (concat "&\\("
+	    (regexp-opt buf)
+	    "\\|#\\(?:x[0-9a-f]+\\|[0-9]+\\)\\)\\(\\'\\|[^0-9a-zA-Z]\\)"))
   "Regexp matching html character entities.")
-
-(defvar w3m-entity-db nil
-  "Hash table of `w3m-entity-alist'.
-The nil value means it has not been initialized.")
-
-(defconst w3m-entity-db-size 13 "Size of `w3m-entity-db'.")
 
 (defconst w3m-encoding-alist
   (eval-when-compile
@@ -3174,13 +3168,6 @@ use `w3m-url-encode-string' instead."
 
 
 ;;; HTML character entity handling:
-(defun w3m-entity-db-setup ()
-  "Initialize the hash table of `w3m-entity-alist'."
-  (setq w3m-entity-db (make-vector w3m-entity-db-size 0))
-  (dolist (elem w3m-entity-alist)
-    (set (intern (car elem) w3m-entity-db)
-	 (cdr elem))))
-
 (eval-and-compile
   (unless (fboundp 'w3m-ucs-to-char)
     (defun w3m-ucs-to-char (codepoint)
@@ -3191,36 +3178,18 @@ otherwise returns the tilde character."
 	  ?~ ;; unsupported character
 	codepoint))))
 
-(defun w3m-entity-value (name strict)
+(defsubst w3m-entity-value (name)
   "Get a char corresponding to NAME from the html char entities database.
-The database is kept in `w3m-entity-db'.  If STRICT is non-nil, the
-exact match with NAME is made.  Otherwise, it allows trailing extra
-characters in NAME, but those characters appear in the return value.
-For example:
-
-\(w3m-entity-value \"ampersand\" t) => nil
-\(w3m-entity-value \"ampersand\" nil) => \"&ersand\""
-  (unless w3m-entity-db
-    ;; Initialize the hash table.
-    (w3m-entity-db-setup))
+The database is kept in `w3m-entity-table'."
   ;; Return a value of the specified entity, or nil if it is unknown.
   (if (char-equal (string-to-char name) ?#)
       (progn
 	(setq name (substring name 1))
-	(let ((codepoint (if (char-equal (string-to-char name) ?x)
+	(char-to-string (w3m-ucs-to-char
+			 (if (char-equal (string-to-char name) ?x)
 			     (string-to-number (substring name 1) 16)
-			   (string-to-number name))))
-	  (char-to-string (w3m-ucs-to-char codepoint))))
-    (let ((val (intern-soft name w3m-entity-db))
-	  (pre name)
-	  (post ""))
-      (if (not strict)
-	  (while (and (null val)
-		      (< 0 (length pre))
-		      (null (setq val (intern-soft pre w3m-entity-db))))
-	    (setq post (concat (substring pre -1) post)
-		  pre (substring pre 0 -1))))
-      (and val (concat (symbol-value val) post)))))
+			   (string-to-number name)))))
+    (gethash name w3m-entity-table)))
 
 (defun w3m-fontify-bold ()
   "Fontify bold text in the buffer containing halfdump."
@@ -3686,9 +3655,9 @@ resizing an image."
 	(w3m-resize-inline-image-internal url (- 100 rate))
       (w3m-message "No image at point"))))
 
-(defun w3m-decode-entities (&optional reserve-prop)
+(defun w3m-decode-entities (&optional keep-properties)
   "Decode entities in the current buffer.
-If optional RESERVE-PROP is non-nil, text property is reserved."
+If optional KEEP-PROPERTIES is non-nil, text property is reserved."
   (save-excursion
     (goto-char (point-min))
     (let (start fid prop value)
@@ -3696,26 +3665,37 @@ If optional RESERVE-PROP is non-nil, text property is reserved."
 	(setq start (match-beginning 0)
 	      fid (get-text-property start 'w3m-form-field-id))
 	(unless (and fid
-		     (string-match "/type=\\(?:text\\|select\\)/name=[^/]+/"
-				   fid))
-	  (if reserve-prop
-	      (setq prop (text-properties-at (match-beginning 0))))
+		     (save-match-data
+		       (string-match "/type=\\(?:text\\|select\\)/name=[^/]+/"
+				     fid)))
+	  (when keep-properties
+	    (setq prop (text-properties-at start)))
+	  (unless (eq (char-after (match-beginning 2)) ?\;)
+	    (goto-char (match-beginning 2)))
 	  ;; Note that `w3m-entity-value' breaks `match-data' at the 1st
 	  ;; time in XEmacs because of the autoloading unicode.elc for
 	  ;; the `ucs-to-char' function.
-	  (when (setq value (w3m-entity-value (match-string 1)
-					      (match-beginning 2)))
-	    (replace-match value nil t))
-	  (if (and reserve-prop prop)
-	      (w3m-add-text-properties start (point) prop)))))))
+	  (when (setq value (w3m-entity-value (match-string 1)))
+	    (delete-region start (point))
+	    (insert value))
+	  (when prop
+	    (w3m-add-text-properties start (point) prop)))))))
 
 (defun w3m-decode-entities-string (str)
   "Decode entities in the string STR."
   (save-match-data
-    (with-temp-buffer
-      (insert str)
-      (w3m-decode-entities)
-      (buffer-string))))
+    (let ((pos 0) (buf))
+      (while (string-match w3m-entity-regexp str pos)
+	(setq buf (cons (or (w3m-entity-value (match-string 1 str))
+			    (match-string 1 str))
+			(cons (substring str pos (match-beginning 0))
+			      buf))
+	      pos (if (eq (string-to-char (match-string 2 str)) ?\;)
+		      (match-end 0)
+		    (match-end 1))))
+      (if buf
+	  (apply 'concat (nreverse (cons (substring str pos) buf)))
+	str))))
 
 (defun w3m-encode-specials-string (str)
   "Encode special characters in the string STR."
@@ -3724,7 +3704,7 @@ If optional RESERVE-PROP is non-nil, text property is reserved."
     (while (string-match "[<>&]" str pos)
       (setq buf
 	    (cons ";"
-		  (cons (car (rassoc (match-string 0 str) w3m-entity-alist))
+		  (cons (gethash (match-string 0 str) w3m-entity-reverse-table)
 			(cons "&"
 			      (cons (substring str pos (match-beginning 0))
 				    buf))))
